Separação dos módulos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="Enviar">enviar</string>
     <string name="digite_a_mensagem">Digite a mensagem</string>
     <string name="message">Campo obrigatório</string>
+    <string name="Validado">Validado</string>
 </resources>
