--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="Validado">Validado</string>
     <string name="login_hint_password">Senha</string>
     <string name="login_nome_hint">Login</string>
+    <string name="acessar">Acessar</string>
 </resources>
